--- a/MySite/index.html
+++ b/MySite/index.html
@@ -14,20 +14,36 @@
 
 <body>
     <div class="wrapper">
+	<h1>Мой сайт, Уася, самий лудтщий!</h1>
+	<div class="text">
+	         <h2>Какой то текст</h2>
+            <p>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex
+            ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil
+            molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur? Ut enim ad minima
+            veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi
+            consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae
+            consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
+			<p>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex
+            ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil
+            molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur? Ut enim ad minima
+            veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi
+            consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae
+            consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
+			</div>
         
             <img id="myFoto" src="pic/8qGcLiyZm_A.jpg" alt="my fhoto">
 			<div class="portfolio">
 			<figure>               
-                <img src="pic/zen.png" alt="CSS Zen Garden: The Beauty of CSS Design">
-				<figcaption><strong><a href="#">CSS Zen Garden: The Beauty of CSS Design</a></br></strong>Пример использования HTML и CSS</figcaption>
+                <a href="#"><img src="pic/zen.png" alt="CSS Zen Garden: The Beauty of CSS Design"></a>
+				<figcaption><strong>CSS Zen Garden: The Beauty of CSS Design</br></strong>Пример использования HTML и CSS</figcaption>
 				</figure>
 			<figure>	
-                <img src="pic/ufo.png" alt="UFO Shooter">
-				<figcaption><strong><a href="#">UFO Shooter</a></br></strong>Стрелялка по летающим тарелкам.Сделана на HTML canvas</figcaption>
+                <a href="4"><img src="pic/ufo.png" alt="UFO Shooter"></a>
+				<figcaption><strong>UFO Shooter</br></strong>Стрелялка по летающим тарелкам.Сделана на HTML canvas</figcaption>
                 </figure>
 			<figure>	
-				<img src="pic/verbs.png" alt="Irrigular verbs">
-				<figcaption><strong><a href= "#">Irrigular verbs</a></br></strong>Тест на знание неправильных глаголов в английском.</figcaption>
+				<a href= "#"><img src="pic/verbs.png" alt="Irrigular verbs"></a>
+				<figcaption><strong>Irrigular verbs</br></strong>Тест на знание неправильных глаголов в английском.</figcaption>
 			</figure>
 			</div>
             <div class="contacts">
