--- a/MySite/index.html
+++ b/MySite/index.html
@@ -14,7 +14,8 @@
 
 <body>
     <div class="wrapper">
-	<h1>Мой сайт, Уася, самий лудтщий!</h1>
+	<h1><Ларичев Дмитрий, WEB developer./></h1>
+	<img id="myFoto" src="pic/8qGcLiyZm_A.jpg" alt="my fhoto">
 	<div class="text">
 	         <h2>Какой то текст</h2>
             <p>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex
@@ -29,17 +30,15 @@
             veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi
             consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae
             consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
-			</div>
-        
-            <img id="myFoto" src="pic/8qGcLiyZm_A.jpg" alt="my fhoto">
+			</div>                    
 			<div class="portfolio">
 			<figure>               
                 <a href="#"><img src="pic/zen.png" alt="CSS Zen Garden: The Beauty of CSS Design"></a>
-				<figcaption><strong>CSS Zen Garden: The Beauty of CSS Design</br></strong>Пример использования HTML и CSS</figcaption>
+				<figcaption><strong>CSS Zen Garden: The Beauty of CSS Design</br></strong>Пример использования HTML и CSS.</figcaption>
 				</figure>
 			<figure>	
                 <a href="4"><img src="pic/ufo.png" alt="UFO Shooter"></a>
-				<figcaption><strong>UFO Shooter</br></strong>Стрелялка по летающим тарелкам.Сделана на HTML canvas</figcaption>
+				<figcaption><strong>UFO Shooter</br></strong>Стрелялка по летающим тарелкам.Сделана на HTML canvas.</figcaption>
                 </figure>
 			<figure>	
 				<a href= "#"><img src="pic/verbs.png" alt="Irrigular verbs"></a>
