--- a/MySite/index.html
+++ b/MySite/index.html
@@ -45,7 +45,7 @@
 				<figcaption><strong>Irrigular verbs</br></strong>Тест на знание неправильных глаголов в английском.</figcaption>
 			</figure>
 			</div>
-            <div class="contacts">
+            <div id="contacts">
               <ul>
                 <li>Telephone: +79802448421</li>
                     <li><a href ="mailto: Laritcheff@gmail.com">Email:Laritcheff@gmail.com</a></li>
