--- a/MySite/index.html
+++ b/MySite/index.html
@@ -32,18 +32,19 @@
             consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
 			</div>                    
 			<div class="portfolio">
+                <h2>Портфолио.</h2>
 			<figure>               
-                <a href="#"><img src="pic/zen.png" alt="CSS Zen Garden: The Beauty of CSS Design"></a>
-				<figcaption><strong>CSS Zen Garden: The Beauty of CSS Design</br></strong>Пример использования HTML и CSS.</figcaption>
-				</figure>
+                <img src="pic/zen.png" alt="CSS Zen Garden: The Beauty of CSS Design">
+				<a href="https://Laritcheff.github.io/ZEN"><figcaption><strong>CSS Zen Garden: The Beauty of CSS Design</br></strong>Пример использования HTML и CSS.</figcaption>
+				</figure></a>
 			<figure>	
-                <a href="4"><img src="pic/ufo.png" alt="UFO Shooter"></a>
-				<figcaption><strong>UFO Shooter</br></strong>Стрелялка по летающим тарелкам.Сделана на HTML canvas.</figcaption>
-                </figure>
+                <img src="pic/ufo.png" alt="UFO Shooter">
+				<a href="https://laritcheff.github.io/UfoShooter/game.html"><figcaption><strong>UFO Shooter</br></strong>Стрелялка по летающим тарелкам.Сделана на HTML canvas.</figcaption>
+                </figure></a>
 			<figure>	
-				<a href= "#"><img src="pic/verbs.png" alt="Irrigular verbs"></a>
-				<figcaption><strong>Irrigular verbs</br></strong>Тест на знание неправильных глаголов в английском.</figcaption>
-			</figure>
+				<img src="pic/verbs.png" alt="Irrigular verbs">
+				<a href="https://Laritcheff.github.io/verbs"><figcaption><strong>Irrigular verbs</br></strong>Тест на знание неправильных глаголов в английском.</figcaption>
+			</figure></div></a>
 			</div>
             <div id="contacts">
               <ul>
