--- a/UfoShooter/game.html
+++ b/UfoShooter/game.html
@@ -19,7 +19,7 @@
     <div class="wrapper">
         <div class="menu">
             <h1>UFO<br>SHOOTER</h1>
-            <h2 class="key">Press <strong>SPACE</strong> to start game</h2>
+            <h2 class="key">Press <strong onclick="Start()">START</strong> to play</h2>
         </div>
 
 
