--- a/MySite/index.html
+++ b/MySite/index.html
@@ -3,55 +3,64 @@
 <head>
     <title>Laritcheff</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="mob.css">
     <meta charset="utf-8">
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="HandheldFriendly" content="true" />
-    <script src="jquery.js"></script>
     <script async src="Java.js"></script>
 </head>
 
 <body>
     <div class="wrapper">
-	<h1><Ларичев Дмитрий, WEB developer./></h1>
-	<img id="myFoto" src="pic/8qGcLiyZm_A.jpg" alt="my fhoto">
-	<div class="text">
-	         <h2>Какой то текст</h2>
-            <p>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex
-            ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil
-            molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur? Ut enim ad minima
-            veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi
-            consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae
-            consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
-			<p>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex
-            ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil
-            molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur? Ut enim ad minima
-            veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi
-            consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae
-            consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
-			</div>                    
-			<div class="portfolio">
-                <h2>Портфолио.</h2>
-			<figure>               
+        <h1>
+            <Ларичев Дмитрий, WEB developer. />
+        </h1>
+        <img id="myFoto" src="pic/8qGcLiyZm_A.jpg" alt="my fhoto">
+        <hr>
+        <div class="text">
+            <h2>Какой то текст</h2>
+            <p>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel
+                illum qui dolorem eum fugiat quo voluptas nulla pariatur? Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in
+                ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
+            <p>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel
+                illum qui dolorem eum fugiat quo voluptas nulla pariatur? Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in
+                ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
+        </div>
+        <hr>
+        <div class="portfolio">
+            <h2>Портфолио.</h2>
+            <figure>
                 <img src="pic/zen.png" alt="CSS Zen Garden: The Beauty of CSS Design">
-				<a href="https://Laritcheff.github.io/ZEN"><figcaption><strong>CSS Zen Garden: The Beauty of CSS Design</br></strong>Пример использования HTML и CSS.</figcaption>
-				</figure></a>
-			<figure>	
+                <a href="https://Laritcheff.github.io/ZEN">
+                    <figcaption><strong>CSS Zen Garden: The Beauty of CSS Design</br></strong>Пример использования HTML и CSS.</figcaption>
+            </figure>
+            </a>
+            <figure>
                 <img src="pic/ufo.png" alt="UFO Shooter">
-				<a href="https://laritcheff.github.io/UfoShooter/game.html"><figcaption><strong>UFO Shooter</br></strong>Стрелялка по летающим тарелкам.Сделана на HTML canvas.</figcaption>
-                </figure></a>
-			<figure>	
-				<img src="pic/verbs.png" alt="Irrigular verbs">
-				<a href="https://Laritcheff.github.io/verbs"><figcaption><strong>Irrigular verbs</br></strong>Тест на знание неправильных глаголов в английском.</figcaption>
-			</figure></div></a>
-			</div>
-            <div id="contacts">
-              <ul>
-                <li>Telephone: +79802448421</li>
-                    <li><a href ="mailto: Laritcheff@gmail.com">Email:Laritcheff@gmail.com</a></li>
-                    <li><a href ="https://www.facebook.com/dmitriy.laritcheff">Facebook</a></li></ul>
-            </div>
+                <a href="https://laritcheff.github.io/UfoShooter/game.html">
+                    <figcaption><strong>UFO Shooter</br></strong>Стрелялка по летающим тарелкам.Сделана на HTML canvas.
+                    </figcaption>
+            </figure>
+            </a>
+            <figure>
+                <img src="pic/verbs.png" alt="Irrigular verbs">
+                <a href="https://Laritcheff.github.io/verbs">
+                    <figcaption><strong>Irrigular verbs</br></strong>Тест на знание неправильных глаголов в английском.
+                    </figcaption>
+            </figure>
+        </div>
+        </a>
+    </div>
+    <div id="contacts">
+        <ul>
+            <li>Telephone: +79802448421</li>
+            <li><a href="mailto: Laritcheff@gmail.com">Email:Laritcheff@gmail.com</a></li>
+            <li><a href="https://www.facebook.com/dmitriy.laritcheff">Facebook</a></li>
+        </ul>
+    </div>
     </div>
 </body>
 
