--- a/MySite/index.html
+++ b/MySite/index.html
@@ -44,7 +44,7 @@
             время я занимался этим в качестве хобби. Сейчас я готов посвятить себя этой работе полностью. Я полон
             энтузиазма и желания работать!</p>
     </div>
-        <div class="galery1">
+        <div class="galery1" onclick="nextSlide()">
         <ul id="slides">
         <li class="slide showing"><img src="pic/4GZ5hLEwmWs.jpg">
         <li class="slide"><img src="pic/a2lwHTByG6c.jpg">
