--- a/MySite/index.html
+++ b/MySite/index.html
@@ -31,59 +31,103 @@
 
     <div class="wrapper">
         <div class="main">
-        <img id="myFoto" src="pic/8qGcLiyZm_A.jpg" alt="my fhoto">
-        <h1>Привет!<br> &lt Я Ларичев Дмитрий, WEB developer. &gt</h1>
+            <img id="myFoto" src="pic/8qGcLiyZm_A.jpg" alt="my fhoto">
+            <h1>Привет! &lt Я Ларичев Дмитрий, WEB developer. &gt</h1>
         </div>
 
-    <div class="aboutme">
-        <h2>Давайте знакомиться!</h2>
-        <p>Привет. Меня зовут Дмитрий и я web-developer.</p>        
-        <p>Я с детства любил программирование с самых первых уроков информатики в школе. Меня завораживала возможность
-            создания какого-то интересного контента или игры из ничего, просто составляя определенную последованность
-            цифр и символов. Длительное
-            время я занимался этим в качестве хобби. Сейчас я готов посвятить себя этой работе полностью. Я полон
-            энтузиазма и желания работать!</p>
-    </div>
-        <div class="galery1" onclick="nextSlide()">
-        <ul id="slides">
-        <li class="slide showing"><img src="pic/4GZ5hLEwmWs.jpg">
-        <li class="slide"><img src="pic/a2lwHTByG6c.jpg">
-        <li class="slide"><img src="pic/oCStMnHQ52Q.jpg">
-    </ul>        
-    </div>
+        <div class="aboutme" id="aboutme">
+            <h2>Давайте знакомиться!</h2>
+            <p>Привет. Меня зовут Дмитрий и я web-developer.</p>
+            <p>Я с детства любил программирование с самых первых уроков информатики в школе. Меня завораживала возможность создания какого-то интересного контента или игры из ничего, просто составляя определенную последованность цифр и символов. Длительное
+                время я занимался этим в качестве хобби. Сейчас я готов посвятить себя этой работе полностью. Я полон энтузиазма и желания работать!</p>
+        </div>
+        <div class="gallery1" id="gallery1" onclick="nextSlide()">
+            <h2>Галерея</h2>
+            <p>Я являюсь счастливым владельцем рыжего кота по имени Полкан.</p>
+            <ul id="slides">
+                <li class="slide showing"><img src="pic/4GZ5hLEwmWs.jpg">
+                    <li class="slide"><img src="pic/a2lwHTByG6c.jpg">
+                        <li class="slide"><img src="pic/oCStMnHQ52Q.jpg">
+                            <li class="slide"><img src="pic/haGjRO_4XI0[1].jpg"></li>
+                            <li class="slide"><img src='pic/XRfHmTGqDJ0[1].jpg'></li>
+                            <li class="slide"><img src="pic/YPNjx09CPjQ[1].jpg"></li>
+            </ul>
+        </div>
 
-    <div class="portfolio">
-        <h2>Портфолио.</h2>
-        <figure>
-            <img src="pic/zen.png" alt="CSS Zen Garden: The Beauty of CSS Design">
-            <a href="https://Laritcheff.github.io/ZEN">
-                <figcaption><strong>CSS Zen Garden: The Beauty of CSS Design</br></strong>Пример использования HTML и
-                    CSS.</figcaption>
-        </figure>
-        </a>
-        <figure>
-            <img src="pic/ufo.png" alt="UFO Shooter">
-            <a href="https://laritcheff.github.io/UfoShooter/game.html">
-                <figcaption><strong>UFO Shooter</br></strong>Стрелялка по летающим тарелкам.Сделана на HTML canvas.
-                </figcaption>
-        </figure>
-        </a>
-        <figure>
-            <img src="pic/verbs.png" alt="Irrigular verbs">
-            <a href="https://Laritcheff.github.io/verbs">
-                <figcaption><strong>Irrigular verbs</br></strong>Тест на знание неправильных глаголов в английском.
-                </figcaption>
-        </figure>
-    </div>
-    </a>
-    </div>
-    <div id="contacts">
-        <ul>
-            <li>Telephone: +79802448421</li>
-            <li><a href="mailto: Laritcheff@gmail.com">Email:Laritcheff@gmail.com</a></li>
-            <li><a href="https://www.facebook.com/dmitriy.laritcheff">Facebook</a></li>
-        </ul>
-    </div>
+        <div class="gallery2">
+            <ul class="slides2">
+                <li id="slide1"><img src="pic/8jcPAfaC_yg.jpg" alt="cg1"></li>
+                <li id="slide2"><img src="pic/LHOEIflyGGA.jpg" alt="cg2"></li>
+                <li id="slide3"><img src="pic/MY7HJRwOjto.jpg" alt="cg3"></li>
+                <li id="slide4"><img src="pic/OIjJ5sjBMCo.jpg" alt="cg4"></li>
+                <li id="slide5"><img src="pic/opG1fYyQ-wU.jpg" alt="cg5"></li>
+            </ul>
+            <ul class="thumbnails">
+                <li>
+                    <a href="#slide1"><img src="pic/8jcPAfaC_yg.jpg" alt="cg1"></a>
+                </li>
+                <li>
+                    <a href="#slide2"><img src="pic/LHOEIflyGGA.jpg" alt="cg1"></a>
+                </li>
+                <li>
+                    <a href="#slide3"><img src="pic/MY7HJRwOjto.jpg" alt="cg1"></a>
+                </li>
+                <li>
+                    <a href="#slide4"><img src="pic/OIjJ5sjBMCo.jpg" alt="cg1"></a>
+                </li>
+                <li>
+                    <a href="#slide5"><img src="pic/opG1fYyQ-wU.jpg" alt="cg1"></a>
+                </li>
+
+            </ul>
+
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <div class="portfolio">
+            <h2>Портфолио.</h2>
+            <figure>
+                <img src="pic/zen.png" alt="CSS Zen Garden: The Beauty of CSS Design">
+                <a href="https://Laritcheff.github.io/ZEN">
+                    <figcaption><strong>CSS Zen Garden: The Beauty of CSS Design</br></strong>Пример использования HTML и CSS.
+                    </figcaption>
+            </figure>
+            </a>
+            <figure>
+                <img src="pic/ufo.png" alt="UFO Shooter">
+                <a href="https://laritcheff.github.io/UfoShooter/game.html">
+                    <figcaption><strong>UFO Shooter</br></strong>Стрелялка по летающим тарелкам.Сделана на HTML canvas.
+                    </figcaption>
+            </figure>
+            </a>
+            <figure>
+                <img src="pic/verbs.png" alt="Irrigular verbs">
+                <a href="https://Laritcheff.github.io/verbs">
+                    <figcaption><strong>Irrigular verbs</br></strong>Тест на знание неправильных глаголов в английском.
+                    </figcaption>
+            </figure>
+            </a>
+        </div>
+        <footer>
+            <ul>
+                <li>Telephone: +79802448421</li>
+                <li><a href="mailto: Laritcheff@gmail.com">Email:Laritcheff@gmail.com</a></li>
+                <li><a href="https://www.facebook.com/dmitriy.laritcheff">Facebook</a></li>
+            </ul>
+            <footer>
     </div>
 </body>
 
