--- a/MySite/index.html
+++ b/MySite/index.html
@@ -21,7 +21,8 @@
 
 
     <header>
-        <ul class="menu">
+        <nav>
+        <ul>
             <li><a href="#aboutme">Обо мне</a></li>
             <li><a href="#gallery">Галерея</a></li>
             <li><a href="#skills">Технические<br> навыки</a></li>
@@ -29,6 +30,7 @@
             <li><a href="#contacts">Контакты</a></li>
             <li><a href="rezume.pdf" target="_blank">Резюме</a></li>
         </ul>
+        </nav>
     </header>
     <a href="#"><img src="pic/menu.png" id="menubutton"></a>
 
@@ -131,7 +133,7 @@
             </div>
         </div>
 
-        <footer id='contacts'>
+        <div id='contacts'>
             <h2>Контакты</h2>
             <img id="myFoto" src="pic/8qGcLiyZm_A.jpg" alt="my fhoto">
             <ul>
@@ -139,8 +141,15 @@
             <li><a href="mailto: Laritcheff@gmail.com">Email:Laritcheff@gmail.com</a></li>
             <li><a href="https://www.facebook.com/dmitriy.laritcheff">Facebook</a></li>
             <li><a href="https://twitter.com/home">Twitter</a></li>
-            <li><a href="#">LinedIn</a></li>
+            <li><a href="#">LinkedIn</a></li>
             </ul>
+        </div>
+
+        <footer>
+            <p>&copy Laritcheff Dmitry</p>
+            <p>Foto by Bitykov Dmitriy (KapelLmeisteR)</p>
+
+
         </footer>
 
 
