--- a/verbs/index.html
+++ b/verbs/index.html
@@ -12,16 +12,19 @@
 <body>
     <div class="wrapper">
         <h1 id="zag">Irregular verbs</h1>
+        <div class="answer">
+        <p id="right"></p>
+        <p id="wron"></p>
         <h2 id="par1"></h2>
+       </div>
         <form id="form">
             <input type="text" id='one'>
             <input type="text" id='two'>
             <input type="text" id='three'><br>
             <a id="but"><img src="button.png"></a>
         </form>
-        <h3></h3>
-        <p id="right"></p>
-        <p id="wron"></p>
+        
+        
     </div>
 
 </body>
