--- a/MySite/index.html
+++ b/MySite/index.html
@@ -135,7 +135,7 @@
 
         <div id='contacts'>
             <h2>Контакты</h2>
-            <img id="myFoto" src="pic/8qGcLiyZm_A.jpg" alt="my fhoto">
+            <img id="myFoto" src="pic/ph.jpg" alt="my fhoto">
             <ul>
             <li>Telephone: +79802448421</li>
             <li><a href="mailto: Laritcheff@gmail.com">Email:Laritcheff@gmail.com</a></li>
