--- a/UfoShooter/game.html
+++ b/UfoShooter/game.html
@@ -9,10 +9,13 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="HandheldFriendly" content="true" />
-    <script src="jquery.js"></script>
+
+    <script async src="jquery.js"></script>
+    <script async src="resourses.js"></script>
+    <script async src="variable.js"></script>
     <script async src="Java.js"></script>
-	<script async src="resourses.js"></script>
-	<script async src="variable.js"></script>
+
+
 </head>
 
 <body>
