--- a/academy/Google - Task/index.html
+++ b/academy/Google - Task/index.html
@@ -69,6 +69,15 @@
       </div>
       <p>Сервисы Google доступны на разных языках:<a href="#">English</a></p>
     </main>
+<footer>
+<a href="#">Россия</a><br>
+<a href="#">Для бизнеса</a>
+<a href="#">Все о Google</a>
+<a href="#">Как работает Google поиск</a>
+<a href="#">Конфеденциальность</a>
+<a href="#">Условия</a>
+<a href="#">Настройки</a>
+</footer>
     <!--<script src="libs/jquery/dist/jquery.min.js"></script>
   <script src="js/common.js"></script>-->
   </div>
