--- a/MySite/index.html
+++ b/MySite/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 
 <head>
     <title>Laritcheff</title>
@@ -65,7 +65,7 @@
 
             <figure>
                 <img src="pic/ufo.png" alt="UFO Shooter">
-                <a href="https://laritcheff.github.io/UfoShooter/game.html"> </a>
+                <a href=""> </a>
                 <figcaption><strong>UFO Shooter<br></strong>Стрелялка по летающим тарелкам.Сделана на HTML canvas.
                 </figcaption>
             </figure>
